[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "optype"
version = "0.6.1"
description = "Building blocks for precise & flexible type hints"
authors = ["Joren Hammudoglu <jhammudoglu@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
repository = "https://github.com/jorenham/optype/"
documentation = "https://github.com/jorenham/optype?tab=readme-ov-file#optype"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jorenham/optype/issues"
"Changelog" = "https://github.com/jorenham/optype/releases"

[tool.poetry.extras]
numpy = ["numpy"]

[tool.poetry.dependencies]
# bump to `^3.11` after 2025-04-04, and to `^3.12` after 2026-04-24
python = "^3.10.1"
typing-extensions = {version = ">=4.8", python = "<3.13"}

# https://scientific-python.org/specs/spec-0000/
numpy = {version = ">=1.24,<3", optional = true}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
tox = "^4.18.0"

[tool.poetry.group.lint.dependencies]
basedmypy = "^2.6.0"
basedpyright = "^1.16.0"
codespell = "^2.3.0"
ruff = "^0.6.1"
sp-repo-review = {version = "^2024.4.23", extras = ["cli"]}
typing-extensions = "*"
numpy = "~2.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
beartype = "^0.18.5"
typing-extensions = "*"
numpy = "~2.1.0"


[tool.poetry.group.test-github]
optional = true
[tool.poetry.group.test-github.dependencies]
pytest-github-actions-annotate-failures = ">=0.2.0,<1.0"


[tool.codespell]
context = 2
skip = "poetry.lock,pyproject.toml"
ignore-words-list = "AtMost,AtLeast,CanGe,ND,nin"


[tool.basedpyright]
include = ["optype", "examples", "tests"]
ignore = ["**/.venv"]
stubPath = "."
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "all"
defineConstant = {NP2 = true, NP20 = false}

reportUnusedCallResult = false  # https://github.com/microsoft/pyright/issues/8650
reportUnreachable = false  # nothing wrong with `if sys.version_info() >= ...`
reportUnusedImport = false  # dupe of F401
reportUnusedVariable = false  # dupe of F841


[tool.mypy]
python_version = "3.10"
always_true = "NP2"
always_false = "NP20"
modules = ["optype", "tests"]
exclude = ["^.venv/.*"]
strict = true

allow_redefinition = true  # needed for python/numpy compat code
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_code_links = true

# based
disallow_any_expr = false  # https://github.com/numpy/numpy/pull/27211

[[tool.mypy.overrides]]
module = ["tests.*", "tests.numpy.*"]
disallow_any_decorated = false  # blame pytest


[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--doctest-modules",
    "--strict-config",
    "--strict-markers",
    "--showlocals",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
filterwarnings = ["error"]
log_cli_level = "INFO"
minversion = "8.0"
testpaths = ["optype", "examples", "tests"]
xfail_strict = true


[tool.repo-review]
ignore = [
    "PY004",    # no `docs/` (maybe later)
    "PC110",    # no auto-format (all formatters are bad for readability atm)
    "PC140",    # no mypy
    "PC170",    # no sphinx
    "PC180",    # no css or js
    "MY",       # no mypy
    "RTD",      # no readthedocs
]


[tool.ruff]
src = ["optype", "examples", "tests"]
target-version = "py310"
indent-width = 4
show-fixes = true
force-exclude = true
extend-exclude = [".github", ".vscode"]

[tool.ruff.lint]
preview = true
select = [
    "F",        # pyflakes
    "E",        # pycodestyle: error
    "W",        # pycodestyle: warning
    "C90",      # mccabe
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "YTT",      # flake8-2020
    "ANN",      # flake8-annotations
    "ASYNC",    # flake8-async
    "BLE",      # flake8-blind-except
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "COM",      # flake8-commas
    "C4",       # flake8-comprehensions
    "DTZ",      # flake8-datetimez
    "T10",      # flake8-debugger
    "EXE",      # flake8-executable
    "EM",      # flake8-errmsg
    "FA",       # flake8-future-annotations
    "ISC",      # flake8-implicit-str-concat
    "ICN",      # flake8-import-conventions
    "LOG",      # flake8-logging
    "G",        # flake8-logging-format
    "INP",      # flake8-no-pep420
    "PIE",      # flake8-pie
    "T20",      # flake8-print
    "PYI",      # flake8-pyi
    "PT",       # flake8-pytest-style
    "Q",        # flake8-quotes
    "RSE",      # flake8-raise
    "RET",      # flake8-return
    "SLF",      # flake8-self
    "SLOT",     # flake8-slots
    "SIM",      # flake8-simplify
    "TID",      # flake8-tidy-imports
    "TCH",      # flake8-type-checking
    "ARG",      # flake8-unused-arguments
    "PTH",      # flake8-use-pathlib
    "ERA",      # eradicate
    "PD",       # pandas-vet
    "PGH",      # pygrep-hooks
    "PL",       # pylint
    "TRY",      # tryceratops
    "FLY",      # flynt
    "NPY",      # NumPy
    "FAST",     # FastAPI
    "AIR",      # airflow
    "PERF",     # perflint,
    "FURB",     # refurb
    "RUF",      # ruff
]
ignore = [
    # flake8-annotations
    "ANN001",   # missing-type-function-argument (deprecated)
    "ANN002",   # missing-type-args (deprecated)
    "ANN401",   # any-type
    # flake8-pyi
    "PYI034",   # non-self-return-type
    "PYI036",   # bad-exit-annotation
    # pylint
    "PLR0904",  # too-many-public-methods
    # tryceratops
    "TRY003",   # raise-vanilla-args
    # refurb
    "FURB118",  # reimplemented-operator
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
    # isort
    "I001",     # unsorted-imports
    # flake8-no-pep420
    "INP001",   # implicit-namespace-package
    # pylint
    "PLR2004",  # magic-value-comparison
]
"tests/*" = [
    #  pyflakes
    "F841",     # unused-variable
    # flake8-annotations
    "ANN201",   # missing-return-type
    # flake8-self
    "SLF001",   # private-member-access
    # pylint
    "PLC2701",  # import-private-name
    "PLR2004",  # magic-value-comparison
    "PLR0914",  # too-many-locals
]

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = [
    "copy",
    "dataclasses",
    "inspect",
    "json",
    "pickle",
    "string",
    "types",
    "typing",
]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"ctypes" = "ct"
"datetime" = "dt"
"numpy.typing" = "npt"
"optype" = "opt"
"optype.numpy" = "onp"

[tool.ruff.lint.flake8-errmsg]
max-string-length = 42  # this took a while to figure out

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
quote-annotations = true
strict = true

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
known-first-party = ["optype"]
known-third-party = ["numpy", "pytest"]
lines-after-imports = 2
lines-between-types = 0

[tool.ruff.lint.pylint]
allow-dunder-method-names = [
    "__name__",     # attr of e.g. `type` and `function`
    "__qualname__", # attr like `__name__`
    "__replace__",  # method used by `copy.replace` (py313+)
    "__self__",     # attr of a bound method
    "__func__",     # attr of e.g. `classmethod`
    "__wrapped__",     # attr of e.g. `classmethod`

    # used within the `typing` standard library
    "__value__",
    "__origin__",
    "__args__",
    "__metadata__",
    "__parameters__",
    "__typing_unpacked_tuple_args__",
    "__typing_is_unpacked_typevartuple__",

    # `numpy` special methods
    "__array__",
    "__array_finalize__",
    "__array_function__",
    "__array_priority__",
    "__array_ufunc__",
    "__array_wrap__",
    "__array_interface__",
    "__array_struct__",
]
allow-magic-value-types = ["int"]

[tool.ruff.format]
# keep in sync with .editorconfig
indent-style = "space"
line-ending = "lf"
preview = true
quote-style = "single"


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
requires = tox>=4
envlist =
    repo-review
    pre-commit
    py{310,311,312,313rc1}

[testenv]
description = pytest
skip_install = true
allowlist_externals = poetry
commands_pre = poetry install --sync
commands = poetry run pytest

[testenv:pre-commit]
description = pre-commit
skip_install = true
allowlist_externals = poetry
commands_pre = poetry install --sync
commands = poetry run pre-commit run --all-files

[testenv:repo-review]
description = repo-review
skip_install = true
allowlist_externals = poetry
commands_pre = poetry install --sync
commands = poetry run repo-review .
"""
